--- a/style.css
+++ b/style.css
@@ -93,4 +93,9 @@ body{
  justify-content: center;
  padding: 1px 0px 1px 0px;
 }
-/*---------------------------------------*/
+/*------------------CARD MAIN---------------------*/
+.cardcss {
+  background: none;
+  padding: 10px;
+  color: white;
+}
