--- a/css/error404.css
+++ b/css/error404.css
@@ -1,7 +1,7 @@
 body{
 margin: 0px;
 padding: 0px;
-background: url(/Nasa-Proyecto/img/fondo404-2.jpg) no-repeat center; 
+background: url(/img/fondo404-2.jpg) no-repeat center; 
 background-size: cover;
 width: 100%;
 height: 100vh;
