--- a/style.css
+++ b/style.css
@@ -99,3 +99,79 @@ body{
   padding: 10px;
   color: white;
 }
+
+/*--------------FOOTER-------------*/
+
+.tituloFooter{
+  font-size: 15px;
+  color: grey;
+}
+
+.tituloCopy{
+  color: grey;
+  font-size: 10px;
+}
+
+.logoNasaFooter{
+  width: 120px;
+}
+.socialUno{
+  width: 30px;
+  margin-top: 6px;
+}
+
+.socialDos{
+  width: 30px;
+  margin-top: 6px;
+}
+
+.socialTres{
+  width: 30px;
+  margin-top: 6px;
+}
+
+.socialCuatro{
+  width: 30px;
+  margin-top: 6px;
+}
+
+.socialCinco{
+  width: 30px;
+  margin-top: 6px;
+}
+
+.socialSeis{
+  width: 30px;
+}
+
+.socialSiete{
+  width: 37px;
+}
+
+.play{
+  width: 100px;
+}
+.mail{
+  text-decoration: none;
+}
+
+.nosotros{
+  text-decoration: none;
+}
+
+
+@media (max-width:280px){
+  .socialDos{
+    margin-left: 15px;
+  } 
+  .socialTres{
+    margin-left: 30px;
+  } 
+  .socialCuatro{
+    margin-left: 45px;
+  } 
+  .socialCinco{
+    margin-left: 60px;
+  }
+ 
+}
