--- a/style.css
+++ b/style.css
@@ -59,6 +59,42 @@
     font-weight: bold;
 }
 
+/*-----------CARRUSEL------------------*/
+
+.carrusel{
+  margin-top: 5px;
+  
+}
+
+.carruselItems{
+  display: flex;
+  overflow-x:hidden;
+  overflow-y:hidden;
+  padding: 40px 0px ;
+ 
+}
+
+.carruselItem button img{
+  min-width:200px;
+  max-width: 300px;
+  height: 300px;
+  margin: 0px 3px 0px 3px;
+ 
+}
+
+.carruselItem img{
+  width: 100%;
+  height: 100%;
+  border-radius: 7px;
+  object-fit: cover;
+
+}
+
+.carruselItem:hover{
+  transform: scale(1.2);
+
+}
+
 /*---------- CARD DEL DIA -------------*/
 body{
   background: url(./img/fondosDos.jpg) no-repeat fixed center;
