--- a/css/contacto.css
+++ b/css/contacto.css
@@ -118,15 +118,16 @@ body{
    color: white;
   }
   .foto {
+    display: flex;
     border: 5px red solid;
-    border-radius: 30px;
+    border-radius: 10px;
+
   }
   .formulario {
     padding: 15px;
     color: white;
-    
   }
-
+  
   /*--------------FOOTER-------------*/
 
 .tituloFooter{
